- New NXSL "Node" class attributes: isInMaintenanceMode, lastAgentCommTime
- Operator "new" in NXSL which can be used to instantiate objects if object class supports it
- H3C driver correctly reads IPv6 addresses on interfaces
- SMS driver for Nexmo service
- SMS driver for SMSEagle gateway
- Fixed FDB handling on Cisco switches
- Fixed issues: #130, #953, #1097, #1192, #1206, #1285, #1312, #1318, #1320, #1326


*
* 2.1-M1
*
- New policy type: Log Parser
- New server configuration parameter "JobRetryCount"
- Chassis objects
- Hypervisor monitoring subagent
- In case of Policy deploy, Policy uninstall or File upload jobs fail they are scheduled for reinstallation(scheduled tasks)  "JobRetryCount" times. First time job is rescheduled in 10 minutes. Each next wait time is twice more than the previous time. 
- If policy is known as installed on the node by the server and agent reposts that it is not installed it is being reinstalled.
- Added configuration option to log parser to generate event only if regular expression have been matched exact count of the times in a predefined time period
- New internal parameters: Server.ReceivedSNMPTraps, Server.ReceivedSyslogMessages, ReceivedSNMPTraps, ReceivedSyslogMessages
- Max size of agent data collectiors pool can be configured
- Agent data reconciliation block size and timeout can be configured
- New agent parameters System.CPU.CurrentUsage and System.CPU.CurrentUsage(*)
- SSH subagent (for collecting data and executing actions via SSH)
- Zone ID can be set for agent in SNMP proxy mode
- Zones has common default proxy node for all protocols
- Zone's proxy node can be placed inside that zone
- Syslog proxy in agent
- Built-in superuser account renamed to "system"
- Default "admin" account now is ordinary member of "Admins" group without built-in privileges
- New method "enableDiscoveryPolling" in NXSL class "Node"
- New NXSL functions: AgentExecuteAction, GetAllNodes